force-app/main/default/objects/SVMXC__PM_History__c/SVMXC__PM_History__c.object-meta.xml
<CustomObject>
    <description>Tracks execution of schedules in PM Plan</description>
    <label>PM History</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>