force-app/main/default/objects/SVMXC__PM_History__c/fields/SVMXC__Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <type>Lookup</type>
</CustomField>