force-app/main/default/objects/SVMXC__PM_History__c/fields/SVMXC__PM_Plan__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__PM_Plan__c</fullName>
    <label>PM Plan</label>
    <referenceTo>SVMXC__PM_Plan__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>