force-app/main/default/objects/SVMXC__PM_History__c/fields/SVMXC__Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <type>Lookup</type>
</CustomField>