force-app/main/default/objects/SVMXC__PM_History__c/fields/SVMXC__Work_Order_Created_on__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Order_Created_on__c</fullName>
    <label>Work Order Created on</label>
    <type>DateTime</type>
</CustomField>